--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "classnames": "^2.3.1",
+    "node": "^16.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -21,11 +22,15 @@
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack-dev-server --open --hot",
     "build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -45,8 +50,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.3.0",
+    "eslint-loader": "^4.0.2",
     "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^2.3.0",
-    "url-loader": "^4.1.1"
+    "path": "^0.12.7",
+    "ttf-loader": "^1.0.2",
+    "url-loader": "^4.1.1",
+    "webpack-dev-server": "^4.2.1"
   }
 }
