--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack serve --open --hot --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,8 +45,13 @@
     ]
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack-dev-server": "^4.2.1"
   }
 }
