--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2",
-    "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
@@ -64,8 +63,11 @@
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^2.3.0",
     "path": "^0.12.7",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
     "ttf-loader": "^1.0.2",
     "url-loader": "^4.1.1",
+    "webpack": "^5.54.0",
     "webpack-dev-server": "^4.3.0"
   }
 }
